--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 							<iframe src="https://calendar.google.com/calendar/embed?src=s3umdrotc%40gmail.com&ctz=America%2FNew_York" style="border-width:0" width="100%" height="650" frameborder="0" scrolling="no"></iframe>
 						</div>
 						<div class="responsive-iframe-container small-container">
-							<iframe src="https://calendar.google.com/calendar/embed?src=s3umdrotc%40gmail.com&ctz=America%2FNew_York" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+							<iframe src="https://calendar.google.com/calendar/embed?mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=s3umdrotc%40gmail.com&amp;color=%235229A3&amp;ctz=America%2FNew_York" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
 						</div>
 					</div>
 				</div>
